<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrierFirst"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/ic_netology_48dp" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tvPublished"
        app:layout_constraintTop_toTopOf="@+id/ivAvatar"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintEnd_toStartOf="@id/ibMenu"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/tvPublished"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintEnd_toStartOf="@id/ibMenu"
        app:layout_constraintBottom_toTopOf="@id/barrierFirst"
        android:layout_marginBottom="16dp"
        tools:text="@sample/posts.json/data/published" />

    <!--ImageButton
        android:id="@+id/ibMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_24"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no" /-->

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="ivAvatar,tvPublished,ibMenu" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@id/barrierSecond"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPublished"
        app:layout_constraintVertical_bias="0.268"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvContent" />

    <!--ImageView
        android:id="@+id/ivLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/favorite_24dp"
        tools:layout_editor_absoluteY="294dp" /-->

    <!--TextView
        android:id="@+id/tvCoutLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivLike"
        app:layout_constraintStart_toEndOf="@+id/ivLike"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        app:layout_constraintVertical_bias="0.333"
        tools:text="TextView" /-->

    <!--ImageView
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/tvCoutLike"
        app:layout_constraintStart_toEndOf="@+id/tvCoutLike"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        app:srcCompat="@drawable/share_24dp" /-->

    <!--TextView
        android:id="@+id/tvCountShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivShare"
        app:layout_constraintStart_toEndOf="@+id/ivShare"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        tools:text="TextView" /-->

    <TextView
        android:id="@+id/tvCountVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivVisibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        tools:text="TextView" />

    <ImageView
        android:id="@+id/ivVisibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        app:layout_constraintEnd_toStartOf="@id/tvCountVisibility"
        android:layout_marginEnd="8dp"
        app:srcCompat="@drawable/visibility_24dp"
        android:importantForAccessibility="no" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        app:icon="@drawable/ic_like_24dp"
        tools:checked="@sample/posts.json/data/likeById"
        tools:text="@sample/posts.json/data/likes"
        android:text="@string/likes"
        android:textColor="@color/black"
        style="@style/Widget.AppTheme.LikeButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivLike"
        app:layout_constraintTop_toBottomOf="@id/barrierSecond"
        app:icon="@drawable/share_24dp"
        tools:checked="@sample/posts.json/data/share"
        tools:text="@sample/posts.json/data/shares"
        android:text="@string/shares"
        android:textColor="@color/black"
        style="@style/Widget.AppTheme.LikeButton1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_more_vert_24dp"
        style="@style/Widget.AppTheme.LikeButton1" />

    <ImageView
        android:id="@+id/ivVideo"
        android:layout_width="240dp"
        android:layout_height="131dp"
        app:layout_constraintBottom_toTopOf="@id/barrierSecond"
        app:layout_constraintStart_toStartOf="@+id/tvContent"
        app:layout_constraintTop_toBottomOf="@id/tvContent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/loading" />

    <ImageView
        android:id="@+id/ivPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ivVideo"
        app:layout_constraintEnd_toEndOf="@+id/ivVideo"
        app:layout_constraintStart_toStartOf="@+id/ivVideo"
        app:layout_constraintTop_toTopOf="@+id/ivVideo"
        app:srcCompat="@drawable/autoplay_48dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ivVideo,ivPlay" />


</androidx.constraintlayout.widget.ConstraintLayout>